sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: missing arguments for method plusPetit in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
			if (plusPetit(j,j+1)=false){
                            ^